# wii-ext-rs

./: Cargo.toml  README.md
.github/workflows/: build_and_test.yml  clippy.yml  rustfmt.yml
examples/classic-async-embassy-rp/: Cargo.toml
examples/classic-blocking-rp2040-hal/: Cargo.toml
examples/classic-blocking-rp2040-hal/.cargo/: config.toml
examples/embassy-rp-async/: Cargo.toml
examples/embassy-rp-async/src/: main.rs
examples/nunchuk-async-embassy-rp/: Cargo.toml
examples/nunchuk-async-embassy-rp/src/: main.rs
examples/nunchuk-blocking-rp2040-hal/: Cargo.toml  README.md
examples/nunchuk-blocking-rp2040-hal/src/: main.rs
examples/rp2040-hal-blocking/: Cargo.toml
examples/rp2040-hal-blocking/src/: main.rs
src/: classic.rs  classic_async.rs  classic_core.rs  classic_sync.rs  common.rs  lib.rs  nunchuk.rs  test_data.rs
tests/: classic_hd.rs  classic_pdp_clone.rs  classic_pdp_clone_hd.rs  classic_pro.rs  classic_pro_hd.rs  classic_regular.rs
wii-ext/: Cargo.toml  README.md
wii-ext/src/: async_impl.rs  blocking_impl.rs  classic_async.rs  classic_sync.rs  core.rs  interface.rs  interface_async.rs  lib.rs  nunchuk.rs
wii-ext/src/async_impl/: classic.rs  interface.rs  nunchuk.rs
wii-ext/src/blocking_impl/: classic.rs  interface.rs  nunchuk.rs
wii-ext/src/core/: classic.rs  nunchuk.rs
wii-ext/tests/: classic_hd.rs  classic_pdp_clone.rs  classic_pdp_clone_hd.rs  classic_pro.rs  classic_pro_hd.rs  classic_regular.rs  nunchuk.rs
wii-ext/tests/common/: test_data.rs
