[package]
name = "wii-ext"
version = "0.1.0"
edition = "2021"
authors = ["9names"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.5", features = ["unproven"] }

[dev-dependencies]
embedded-hal-mock = "0.8.0"
paste = "1.0.6"