[package]
name = "wii-ext"
description = "Wiimote Extension Controller (nunchuk, classic controller) driver for Rust embedded-hal traits"
version = "0.3.0"
edition = "2021"
authors = ["9names"]
repository = "https://github.com/9names/wii-ext-rs"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "1"
embedded-hal-async = { version = "1"}
defmt = { version = "0.3.0", optional = true }

[dev-dependencies]
embedded-hal-mock = "0.10.0"
paste = "1.0.6"

[features]
default = ["defmt_print"]
defmt_print = ["defmt"]
