[package]
authors = ["9names"]
edition = "2018"
readme = "README.md"
name = "wii-ext_blocking_demo"
version = "0.1.0"
resolver = "2"
publish = false

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
# embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-hal = "1"
embedded-time = "0.12.0"
defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
fugit = "0.3.6"
# usb-device = "0.2"
# usbd-human-interface-device = "0.4.5"
wii-ext = { version = "0.3.0", features = ["defmt_print",], path = "../../wii-ext" }
rp-pico = "0.9.0"

[profile.release]
debug = 2